# research-portal

./: .gitignore  README.md  app.py  cli.py  main.py  pyproject.toml  run_cli.py
src/: app.py  cli.py  config.py  download_data.py  gen_embed .py  gen_embed.py  pdf_extraction.py  query_engine.py  vector_db.py
src/static/: index.html
static/: index.html
