[tool.poetry]
name = "research-portal"
version = "0.1.0"
description = "Analyst Assistant"
authors = ["Eole Cervenka"]
package-mode = false

[tool.poetry.dependencies]
python = "~3.12.0"
pinecone = "5.4.2"
python-dotenv = "1.0.1"
google-genai = "1.19.0"
flask = "3.1.1"

[tool.poetry.scripts]
start-app = "app:main"
