[tool.poetry]
name = "research-portal"
version = "0.1.0"
description = "Analyst Assistant"
authors = ["Eole Cervenka"]

packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "~3.12.0"
pinecone = "5.4.2"
python-dotenv = "1.0.1"
google-genai = "1.19.0"
flask = "3.1.1"
boto3 = "^1.38.32"

[tool.poetry.scripts]
start-app = "src.app:main"
start-cli = "src.cli:main"